Add ${misc:Depends} Don't remove pulse group. Don't export DH_OPTIONS.

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Standards-Version: 3.7.2
 
 Package: pulseaudio
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: esound
 Replaces: esound
 Provides: esound
@@ -48,7 +48,7 @@ Description: PulseAudio sound server
 
 Package: pulseaudio-utils
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Command line tools for the PulseAudio sound server
  These tools provide command line access to various features of the
  PulseAudio sound server. Included tools are:
@@ -65,7 +65,7 @@ Description: Command line tools for the PulseAudio sound server
 
 Package: pulseaudio-module-zeroconf
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Zeroconf module for PulseAudio sound server
  This module enables PulseAudio to publish avaliable sinks and sources via
  zeroconf (aka. Avahi, mdns).
@@ -74,7 +74,7 @@ Description: Zeroconf module for PulseAudio sound server
 
 Package: pulseaudio-module-hal
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: HAL device detection module for PulseAudio sound server
  This module enables PulseAudio to detect new sound devices dynamically via
  the HAL API.
@@ -83,7 +83,7 @@ Description: HAL device detection module for PulseAudio sound server
 
 Package: pulseaudio-module-jack
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: jackd modules for PulseAudio sound server
  These modules enables PulseAudio to connect to a jackd daemon.
  .
@@ -91,7 +91,7 @@ Description: jackd modules for PulseAudio sound server
 
 Package: pulseaudio-module-lirc
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: lirc module for PulseAudio sound server
  This module enables the volume of a PulseAudio sink to be controlled when
  buttons of an infrared remote control are pressed (through LIRC).
@@ -100,7 +100,7 @@ Description: lirc module for PulseAudio sound server
 
 Package: pulseaudio-module-gconf
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: gconf module for PulseAudio sound server
  This module enables PulseAudio to store additional configuration in gconf.
  .
@@ -108,7 +108,7 @@ Description: gconf module for PulseAudio sound server
 
 Package: pulseaudio-module-x11
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: X11 module for PulseAudio sound server
  This module enables PulseAudio to publish itself as the default sound
  server to the X11 root window automatically upon startup. The is also a
@@ -118,7 +118,7 @@ Description: X11 module for PulseAudio sound server
 
 Package: libpulse0
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: pulseaudio
 Description: PulseAudio client libraries
  Client libraries used by applications that access a PulseAudio sound server
@@ -126,7 +126,7 @@ Description: PulseAudio client libraries
 
 Package: libpulse-mainloop-glib0
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: PulseAudio client libraries
  Client libraries used by applications that access a PulseAudio sound server
  via PulseAudio's native interface.
@@ -135,7 +135,7 @@ Description: PulseAudio client libraries
 
 Package: libpulse-browse0
 Architecture: any
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: PulseAudio client libraries
  Client libraries used by applications that access a PulseAudio sound server
  via PulseAudio's native interface.
@@ -145,8 +145,9 @@ Description: PulseAudio client libraries
 
 Package: libpulse-dev
 Architecture: any
-Depends: libpulse0, libpulse-mainloop-glib0, libpulse-browse0, libx11-dev,
-    x11proto-core-dev, libxt-dev, libglib2.0-dev, libavahi-client-dev
+Depends: ${misc:Depends}, libpulse0, libpulse-mainloop-glib0,
+    libpulse-browse0, libx11-dev, x11proto-core-dev, libxt-dev,
+    libglib2.0-dev, libavahi-client-dev
 Description: PulseAudio client development headers and libraries
  Headers and libraries for developing applications that access a PulseAudio
  sound server via PulseAudio's native interface.
