--- a/debian/rules
+++ b/debian/rules
@@ -6,21 +6,23 @@ DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 CFLAGS = -Wall -g
 
-CONFIGURE_FLAGS = --prefix=/usr --sysconfdir=/etc --localstatedir=/var CFLAGS="$(CFLAGS)" --with-realtime-group=pulse-rt
-
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
 	CFLAGS += -O2
 endif
 
+CONFIGURE_FLAGS = --prefix=/usr --sysconfdir=/etc --localstatedir=/var CFLAGS="$(CFLAGS)" --with-realtime-group=pulse-rt
+
+ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+	CONFIGURE_FLAGS += --host=$(DEB_HOST_GNU_TYPE)
+else
+	CONFIGURE_FLAGS += --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)
+endif
+
 config.status: configure
 	dh_testdir
-	ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
-		./configure --host=$(DEB_HOST_GNU_TYPE) $(CONFIGURE_FLAGS)
-	else
-		./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) $(CONFIGURE_FLAGS)
-	endif
+	./configure $(CONFIGURE_FLAGS)
 
 #Architecture 
 build: build-arch build-indep
