--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ endif
 CONFIGURE_FLAGS = --prefix=/usr --sysconfdir=/etc --localstatedir=/var CFLAGS="$(CFLAGS)" --with-realtime-group=pulse-rt
 
 ifeq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
-	CONFIGURE_FLAGS += --host=$(DEB_HOST_GNU_TYPE)
+	CONFIGURE_FLAGS += --build=$(DEB_BUILD_GNU_TYPE)
 else
 	CONFIGURE_FLAGS += --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE)
 endif
