--- a/debian/control
+++ b/debian/control
@@ -12,13 +12,11 @@ Standards-Version: 3.7.2
 Package: pulseaudio
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: esound
-Replaces: esound
-Provides: esound
 Recommends: pulseaudio-module-hal, pulseaudio-module-x11,
     libasound2-plugins-pulse
 Suggests: pulseaudio-utils, paprefs, pavumeter, pavucontrol, padevchooser,
-    paman, libgstreamer-plugins-pulse0.10-0, libao-pulse
+    paman, libgstreamer-plugins-pulse0.10-0, libao-pulse,
+    pulseaudio-esound-compat
 Description: PulseAudio sound server
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
@@ -66,6 +64,20 @@ Description: Command line tools for the PulseAudio sound server
    padsp - /dev/dsp wrapper to transparently support OSS applications.
    pax11publish - Store/retrieve PulseAudio default server/sink/source
                   settings in the X11 root window.
+
+Package: pulseaudio-esound-compat
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Conflicts: esound
+Replaces: esound
+Provides: esound
+Description: PulseAudio sound server
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains the ESD compatibility components and enables a
+ PulseAudio sound server to fully replace ESD.
 
 Package: pulseaudio-module-zeroconf
 Architecture: any
