--- a/debian/control
+++ b/debian/control
@@ -11,9 +11,8 @@ Standards-Version: 3.7.2
 
 Package: pulseaudio
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Recommends: pulseaudio-module-hal, pulseaudio-module-x11,
-    libasound2-plugins-pulse
+Depends: ${shlibs:Depends}, ${misc:Depends}, pulseaudio-module-hal
+Recommends: pulseaudio-module-x11, libasound2-plugins-pulse
 Suggests: pulseaudio-utils, paprefs, pavumeter, pavucontrol, padevchooser,
     paman, libgstreamer-plugins-pulse0.10-0, libao-pulse,
     pulseaudio-esound-compat
