--- a/src/daemon/default.pa.in
+++ b/src/daemon/default.pa.in
@@ -41,7 +41,8 @@ load-module module-hal-detect
 #add-autoload-sink output module-alsa-sink sink_name=output
 #add-autoload-source input module-alsa-source source_name=input
 
-### Load native protocol
+### Load several protocols
+load-module module-esound-protocol-unix
 load-module module-native-protocol-unix
 
 ### Network access (may be configured with paprefs, so leave this commented
@@ -69,9 +70,6 @@ load-module module-rescue-streams
 #set-default-source input
 
 .nofail
-
-### Load esound protocol
-load-module module-esound-protocol-unix
 
 ### Load something to the sample cache
 load-sample x11-bell /usr/share/sounds/gtk-events/activate.wav
