--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: pulseaudio
 Section: sound
 Priority: optional
 Maintainer: CJ van den Berg <cj@vdbonline.com>
+Uploaders: Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: debhelper (>= 5), dpatch, autotools-dev, m4, libltdl3-dev,
     liboil-dev, libsamplerate-dev, libsndfile-dev, libx11-dev,
     x11proto-core-dev, libxt-dev, libcap-dev, libasound-dev, libglib2.0-dev,
@@ -156,6 +157,7 @@ Description: X11 module for PulseAudio sound server
  The modules are called module-x11-publish and module-x11-bell.
 
 Package: libpulse0
+Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: pulseaudio
@@ -195,10 +197,9 @@ Description: PulseAudio client libraries
  PulseAudio sinks and sources by client applications.
 
 Package: libpulse-dev
+Section: libdevel
 Architecture: any
-Depends: ${misc:Depends}, libpulse0, libpulse-mainloop-glib0,
-    libpulse-browse0, libx11-dev, x11proto-core-dev, libxt-dev,
-    libglib2.0-dev, libavahi-client-dev
+Depends: ${misc:Depends}, libpulse0 (= ${Source-Version}), libpulse-mainloop-glib0, libpulse-browse0, libx11-dev, x11proto-core-dev, libxt-dev, libglib2.0-dev, libavahi-client-dev
 Description: PulseAudio client development headers and libraries
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
