--- a/debian/control
+++ b/debian/control
@@ -45,6 +45,19 @@ Description: PulseAudio sound server
  .
  This package contains the daemon and basic module set.
 
+Package: pulseaudio-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio (= ${binary:Version})
+Description: PulseAudio sound server detached debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for binaries in all the
+ pulesaudio packages.
+ .
+ Most people will not need this package.
+
 Package: pulseaudio-utils
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
