--- a/debian/control
+++ b/debian/control
@@ -73,7 +73,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: esound
 Replaces: esound
 Provides: esound
-Description: PulseAudio sound server
+Description: PulseAudio ESD compatibility layer
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
  much better latency, mixing/re-sampling quality and overall architecture.
@@ -174,7 +174,7 @@ Description: PulseAudio client libraries
 Package: libpulse-mainloop-glib0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: PulseAudio client libraries
+Description: PulseAudio client libraries (glib support)
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
  much better latency, mixing/re-sampling quality and overall architecture.
@@ -187,7 +187,7 @@ Description: PulseAudio client libraries
 Package: libpulse-browse0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: PulseAudio client libraries
+Description: PulseAudio client libraries (zeroconf support)
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
  much better latency, mixing/re-sampling quality and overall architecture.
