--- a/debian/control
+++ b/debian/control
@@ -46,6 +46,17 @@ Description: PulseAudio sound server
  .
  This package contains the daemon and basic module set.
 
+Package: pulseaudio-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio (= ${binary:Version})
+Description: PulseAudio sound server detached debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains the detached debugging symbols for the daemon and
+ basic module set.
+
 Package: pulseaudio-utils
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -67,6 +78,16 @@ Description: Command line tools for the PulseAudio sound server
    pax11publish - Store/retrieve PulseAudio default server/sink/source
                   settings in the X11 root window.
 
+Package: pulseaudio-utils-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-utils (= ${binary:Version})
+Description: PulseAudio command line tools detached debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for the command line tools.
+
 Package: pulseaudio-esound-compat
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -81,6 +102,16 @@ Description: PulseAudio ESD compatibility layer
  This package contains the ESD compatibility components and enables a
  PulseAudio sound server to fully replace ESD.
 
+Package: pulseaudio-esound-compat-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-esound-compat (= ${binary:Version})
+Description: PulseAudio ESD compatibility layer debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the ESD compatibility components.
+
 Package: pulseaudio-module-zeroconf
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -93,6 +124,16 @@ Description: Zeroconf module for PulseAudio sound server
  zeroconf (aka. Avahi, mdns).
  .
  The module is called module-zeroconf-publish.
+
+Package: pulseaudio-module-zeroconf-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-zeroconf (= ${binary:Version})
+Description: Zeroconf module for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for the zeroconf module.
 
 Package: pulseaudio-module-hal
 Architecture: any
@@ -107,6 +148,16 @@ Description: HAL device detection module for PulseAudio sound server
  .
  The module is called module-hal-detect.
 
+Package: pulseaudio-module-hal-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-hal (= ${binary:Version})
+Description: HAL module for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the HAL module for PulseAudio.
+
 Package: pulseaudio-module-jack
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -118,6 +169,16 @@ Description: jackd modules for PulseAudio sound server
  These modules enables PulseAudio to connect to a jackd daemon.
  .
  The modules are called module-jack-sink, module-jack-source.
+
+Package: pulseaudio-module-jack-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-jack (= ${binary:Version})
+Description: jackd modules for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio jack modules.
 
 Package: pulseaudio-module-lirc
 Architecture: any
@@ -132,6 +193,16 @@ Description: lirc module for PulseAudio sound server
  .
  The module is called module-lirc.
 
+Package: pulseaudio-module-lirc-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-lirc (= ${binary:Version})
+Description: lirc module for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio lirc module.
+
 Package: pulseaudio-module-gconf
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -143,6 +214,16 @@ Description: gconf module for PulseAudio sound server
  This module enables PulseAudio to store additional configuration in gconf.
  .
  The module is called module-gconf.
+
+Package: pulseaudio-module-gconf-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-gconf (= ${binary:Version})
+Description: gconf module for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio gconf module.
 
 Package: pulseaudio-module-x11
 Architecture: any
@@ -158,6 +239,16 @@ Description: X11 module for PulseAudio sound server
  .
  The modules are called module-x11-publish and module-x11-bell.
 
+Package: pulseaudio-module-x11-dbg
+Architecture: any
+Depends: ${misc:Depends}, pulseaudio-module-x11 (= ${binary:Version})
+Description: X11 module for PulseAudio sound server debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains debugging symbols for the PulseAudio X11 modules.
+
 Package: libpulse0
 Section: libs
 Architecture: any
@@ -170,6 +261,18 @@ Description: PulseAudio client libraries
  .
  Client libraries used by applications that access a PulseAudio sound server
  via PulseAudio's native interface.
+
+Package: libpulse0-dbg
+Section: libs
+Architecture: any
+Depends: ${misc:Depends}, libpulse0 (= ${binary:Version})
+Description: PulseAudio client libraries detached debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for the PulseAudio native
+ interface client libraries.
 
 Package: libpulse-mainloop-glib0
 Architecture: any
@@ -184,6 +287,17 @@ Description: PulseAudio client libraries (glib support)
  .
  This package adds support for glib2 client applications.
 
+Package: libpulse-mainloop-glib0-dbg
+Architecture: any
+Depends: ${misc:Depends}, libpulse-mainloop-glib0 (= ${binary:Version})
+Description: PulseAudio client libraries (glib support) debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for the PulseAudio native
+ interface glib support client libraries.
+
 Package: libpulse-browse0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
@@ -197,6 +311,17 @@ Description: PulseAudio client libraries (zeroconf support)
  .
  This package adds support for zeroconf (aka. Avahi, mdns) discovery of
  PulseAudio sinks and sources by client applications.
+
+Package: libpulse-browse0-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: PulseAudio client libraries (zeroconf support) debugging symbols
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This package contains detached debugging symbols for the PulseAudio native
+ interface zeroconf support client libraries.
 
 Package: libpulse-dev
 Section: libdevel
