Make libpulse-browse0 depend on avahi-daemon to ensure that the avahi daemon is running. (Closes: #440333)

--- a/debian/control
+++ b/debian/control
@@ -300,7 +300,7 @@ Description: PulseAudio client libraries (glib support) debugging symbols
 
 Package: libpulse-browse0
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: avahi-daemon, ${shlibs:Depends}, ${misc:Depends}
 Description: PulseAudio client libraries (zeroconf support)
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
