--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,9 @@ Uploaders: Sjoerd Simons <sjoerd@debian.org>
 Build-Depends: debhelper (>= 5), cdbs, quilt, autotools-dev, m4,
     libltdl3-dev, liboil0.3-dev (>= 0.3.0) | liboil-dev, libsamplerate0-dev,
     libsndfile1-dev (>= 1.0.10) | libsndfile-dev, libx11-dev,
-    x11proto-core-dev, libxt-dev, libcap-dev, libasound-dev, libglib2.0-dev,
+    x11proto-core-dev, libxt-dev, libglib2.0-dev,
+    libcap-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
+    libasound-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
     libavahi-client-dev, libjack0.100.0-dev, libwrap0-dev,
     liblircclient-dev, libgconf2-dev, libhal-dev, libasyncns-dev,
     libatomic-ops-dev
