--- a/debian/rules
+++ b/debian/rules
@@ -4,9 +4,20 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
+common-build-arch::
+	grep -v -e alsa -e evdev debian/pulseaudio.install > \
+	    debian/pulseaudio.install.kfreebsd-i386
+	grep -v -e alsa -e evdev debian/pulseaudio.install > \
+	    debian/pulseaudio.install.kfreebsd-amd64
+
+
 common-install-arch::
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/lintian
 	cp -a $(CURDIR)/debian/overrides $(CURDIR)/debian/tmp/usr/share/lintian
+
+clean::
+	rm -f debian/pulseaudio.install.kfreebsd-i386
+	rm -f debian/pulseaudio.install.kfreebsd-amd64
 
 DEB_CONFIGURE_EXTRA_FLAGS = --with-realtime-group=pulse-rt
 DEB_FIXPERMS_EXCLUDE = usr/bin/pulseaudio
