--- a/debian/control
+++ b/debian/control
@@ -230,6 +230,7 @@ Description: gconf module for PulseAudio sound server debugging symbols
 Package: pulseaudio-module-x11
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: gnome-audio
 Description: X11 module for PulseAudio sound server
  PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
  WIN32 systems. It is a drop in replacement for the ESD sound server with
