--- a/debian/rules
+++ b/debian/rules
@@ -23,4 +23,4 @@ DEB_CONFIGURE_EXTRA_FLAGS = --with-realtime-group=pulse-rt
 DEB_FIXPERMS_EXCLUDE = usr/bin/pulseaudio
 DEB_DH_MAKESHLIBS_ARGS_ALL = --exclude=usr/lib/pulse-0.9/modules
 DEB_DH_INSTALL_ARGS = --sourcedir=$(CURDIR)/debian/tmp
-
+DEB_UPDATE_RCD_PARAMS = defaults 25 15
