--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,7 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
+include /usr/share/cdbs/1/rules/utils.mk
 
 common-build-arch::
 	grep -v -e alsa -e evdev debian/pulseaudio.install > \
@@ -12,6 +13,8 @@ common-build-arch::
 common-install-arch::
 	mkdir -p $(CURDIR)/debian/tmp/usr/share/lintian
 	cp -a $(CURDIR)/debian/overrides $(CURDIR)/debian/tmp/usr/share/lintian
+
+common-binary-post-install-arch:: list-missing
 
 clean::
 	rm -f debian/pulseaudio.install.kfreebsd-i386
