--- a/debian/control
+++ b/debian/control
@@ -256,6 +256,20 @@ Description: X11 module for PulseAudio sound server debugging symbols
  .
  This package contains debugging symbols for the PulseAudio X11 modules.
 
+Package: libpulsecore4
+Section: libs
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Recommends: pulseaudio
+Conflicts: pulseaudio (<= 0.9.6-2)
+Description: PulseAudio sound server core
+ PulseAudio, previously known as Polypaudio, is a sound server for POSIX and
+ WIN32 systems. It is a drop in replacement for the ESD sound server with
+ much better latency, mixing/re-sampling quality and overall architecture.
+ .
+ This library provides core services to the PulseAudio daemon and modules
+ the run inside the daemon.
+
 Package: libpulse0
 Section: libs
 Architecture: any
