--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,12 @@ update-patch-series:
 	rm -f $(CURDIR)/debian/patches/*.patch
 	git-format-patch -o $(CURDIR)/debian/patches patches ^upstream | \
 		xargs -n 1 basename > $(CURDIR)/debian/patches/series
+	for patch in $$(ls $(CURDIR)/debian/patches/*.patch) ; \
+	do \
+		lines=$$(cat $$patch | wc -l) ; \
+		head -n $$(($$lines - 3)) $$patch > $${patch}.chomped ; \
+		mv $${patch}.chomped $$patch ; \
+	done
 
 DEB_CONFIGURE_EXTRA_FLAGS = --with-realtime-group=pulse-rt
 DEB_FIXPERMS_EXCLUDE = usr/bin/pulseaudio
