--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser, lsb-base (>= 3)
 Conflicts: libltdl3 (<< 1.5.24-1)
 Recommends: pulseaudio-module-hal, pulseaudio-module-x11,
-    libasound2-plugins, libgstreamer-plugins-pulse0.10-0,
+    libasound2-plugins, gstreamer0.10-pulseaudio,
     pulseaudio-esound-compat, paprefs, padevchooser
 Suggests: pulseaudio-utils, pavumeter, pavucontrol, paman
 Description: PulseAudio sound server
